fixed issue that libraries that are part of the project are not added to the project's classpath.